plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.planmate'
version = '0.0.1-SNAPSHOT'
// buf.build/planmate/proto 의 모듈 커밋. **Backend-v2 와 반드시 같은 값이어야 한다.**
def protoCommit = '20260802133042.28c8c830142c'
// BSR 생성 SDK 버전은 <생성 플러그인 버전>.1.<모듈 커밋> 형태라 아티팩트마다 접두사가 다르다.
def protobufSdkVersion = "35.1.0.1.$protoCommit"
def grpcSdkVersion = "1.83.1.1.$protoCommit"
// spring-grpc 1.0+ 는 Spring Boot 4 를 요구하므로 Boot 3.5 인 이 프로젝트는 net.devh 를 쓴다.
def grpcStarterVersion = '3.1.0.RELEASE'
// 생성 SDK 가 요구하는 grpc-java 버전. net.devh 가 끌어오는 grpc-core 와 섞이지 않도록 BOM 으로 정렬한다.
def grpcVersion = '1.83.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
    // BSR Generated SDK (buf.build/planmate/proto)
    maven { url 'https://buf.build/gen/maven' }
}

dependencies {
    // ── 서비스 간 gRPC 계약 (proto / BSR) ──
    implementation platform("io.grpc:grpc-bom:$grpcVersion")
    implementation "build.buf.gen:planmate_proto_protocolbuffers_java:$protobufSdkVersion"
    implementation "build.buf.gen:planmate_proto_grpc_java:$grpcSdkVersion"

    // gRPC 클라이언트 (Backend-v2 내부 사용자 API 호출 + 변경 스트림 구독)
    implementation "net.devh:grpc-client-spring-boot-starter:$grpcStarterVersion"

    // Web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // JPA + PostgreSQL + Flyway
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // Security + JWT
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Bean Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // JSON
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // Object Storage (MinIO)
    implementation 'io.minio:minio:8.5.12'

    // Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    // gRPC 클라이언트는 in-process 서버를 띄워 테스트한다 (실제 포트 바인딩 불필요)
    testImplementation 'io.grpc:grpc-inprocess'
    testImplementation 'io.grpc:grpc-testing'

    // 실제 PostgreSQL. 사용자 읽기 모델은 네이티브 SQL(ON CONFLICT 업서트, EXISTS 서브쿼리)에
    // 정합성을 걸고 있어 목으로는 검증이 안 된다 — 업서트 가드가 뒤집혀도, 파생된 count 쿼리가
    // 어긋나도 목 테스트는 전부 통과한다. H2 도 안 되는 이유는 ON CONFLICT/gin_trgm_ops/
    // Flyway 마이그레이션이 전부 PG 전용이기 때문이다.
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:junit-jupiter'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()

    // Testcontainers 가 Docker 데몬에 붙게 만드는 설정. 이게 없으면 컨테이너가 안 떠서
    // PostgresTestBase 를 쓰는 테스트가 전부 initializationError 로 죽는다.
    //
    // 원인: docker-java 는 API 버전을 명시하지 않으면 1.32 로 요청하는데, Docker 25+ 데몬은
    // 최소 1.44 를 요구해 "client version 1.32 is too old" 로 400 을 준다.
    // 소켓 접근 자체는 되고 버전 협상만 실패하는 것이라 에러 메시지가 오해를 부른다.
    //
    // 실제로 먹히는 건 systemProperty 'api.version' 이다. docker-java 는 설정 키를
    // api.version 으로 읽고, 환경변수 DOCKER_API_VERSION 은 이 키에 매핑되지 않는다.
    // DOCKER_HOST 는 환경변수 기반 전략이 먼저 선택되게 해 설정 경로를 일정하게 만든다.
    // (Gradle 테스트 워커는 쉘 환경을 그대로 물려받지 않으므로 여기서 명시적으로 넘긴다.)
    //
    // 다른 소켓 경로나 낮은 데몬을 쓴다면 DOCKER_HOST / DOCKER_API_VERSION 을 내보내 덮어쓴다.
    environment 'DOCKER_HOST', System.getenv('DOCKER_HOST') ?: 'unix:///var/run/docker.sock'
    systemProperty 'api.version', System.getenv('DOCKER_API_VERSION') ?: '1.44'
}

/**
 * 로컬 개발용 .env(gitignore 대상)를 KEY=VALUE로 읽는다.
 * `#` 주석 / 빈 줄 / 선택적 `export ` 접두사 / 값을 감싼 따옴표를 처리한다.
 */
def readDotEnv = { File envFile ->
    def result = [:]
    if (!envFile.exists()) {
        return result
    }
    envFile.eachLine('UTF-8') { rawLine ->
        def line = rawLine.trim()
        if (line.isEmpty() || line.startsWith('#')) {
            return
        }
        if (line.startsWith('export ')) {
            line = line.substring('export '.length()).trim()
        }
        def separator = line.indexOf('=')
        if (separator <= 0) {
            return
        }
        def key = line.substring(0, separator).trim()
        def value = line.substring(separator + 1).trim()
        if (value.length() >= 2
                && ((value.startsWith('"') && value.endsWith('"'))
                    || (value.startsWith("'") && value.endsWith("'")))) {
            value = value.substring(1, value.length() - 1)
        }
        result[key] = value
    }
    return result
}

bootRun {
    jvmArgs = ['-Xmx256m', '-Xms64m', '-XX:+UseSerialGC']

    // .env를 자동 주입한다 (`source .env` 불필요).
    // 쉘 환경변수보다 .env를 우선한다: Gradle 데몬은 자신을 처음 띄운 쉘의 환경을 계속
    // 들고 있어서, 쉘 우선으로 두면 오래된 값이 조용히 이기고 .env 수정이 안 먹는다.
    // 일회성 오버라이드가 필요하면 -Denv.KEY=VALUE 로 준다.
    readDotEnv(file('.env')).each { key, value ->
        environment(key, System.getProperty("env.$key") ?: value)
    }
}
